--- a/BHH Backend/User_Authentication_Service/build.gradle
+++ b/BHH Backend/User_Authentication_Service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'project-report'
 }
 
 group = 'com.bhh'
@@ -78,6 +79,10 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+htmlDependencyReport {
+    projects = project.allprojects
 }
 
 tasks.named('test') {
