--- a/BHH Backend/User_Authentication_Service/build.gradle
+++ b/BHH Backend/User_Authentication_Service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     // Database
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
 
     // Mappers
     implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
