--- a/BHH Frontend/package.json
+++ b/BHH Frontend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "json-server": "^1.0.0-alpha.22",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
