--- a/BHH Backend/User_Authentication_Service/build.gradle
+++ b/BHH Backend/User_Authentication_Service/build.gradle
@@ -64,6 +64,13 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
+    // Spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
+
     // Others...
     //testImplementation 'org.springframework.kafka:spring-kafka-test'
     //implementation 'org.springframework.boot:spring-boot-starter-websocket'
