--- a/BHH Backend/User_Authentication_Service/src/main/resources/application.properties
+++ b/BHH Backend/User_Authentication_Service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/BHH_User_Service?createDa
 spring.datasource.username=postgres
 spring.datasource.password=!QkaParolka123
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
