--- a/BHH Backend/User_Authentication_Service/build.gradle
+++ b/BHH Backend/User_Authentication_Service/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 
     // Utils
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // Swagger
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
@@ -70,6 +70,10 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
+
+    // Web socket
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.2.2'
+
 
     // Others...
     //testImplementation 'org.springframework.kafka:spring-kafka-test'
