Successfully implemented web socket communication in the application.

--- a/BHH Backend/User_Authentication_Service/src/main/resources/application.properties
+++ b/BHH Backend/User_Authentication_Service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+websocket.server.port=8082
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/BHH_User_Service?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
