--- a/BHH Backend/User_Authentication_Service/build.gradle
+++ b/BHH Backend/User_Authentication_Service/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
 
     // Web socket
+    implementation group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.6'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.2.2'
-
 
     // Others...
     //testImplementation 'org.springframework.kafka:spring-kafka-test'
