--- a/BHH Frontend/package.json
+++ b/BHH Frontend/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
     "json-server": "^1.0.0-alpha.22",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
@@ -26,7 +28,11 @@
     "redux-thunk": "^3.1.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
     "ws": "^8.16.0"
   },
   "scripts": {
